@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- The exceptions.t test would fail if Sub::Util was not installed. Reported by
+  Paul Howarth. GH #19.
+
+
 0.25     2017-11-23
 
 - All exceptions now include a stack trace by default when treated as a
